data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3190.wast
;; 9. **Test with Imported and Exported Functions**:    - **Description**: Call imported and exported functions and verify the correct processing across boundaries.    - **Constraint**: Ensures the `call` instruction resolves indices correctly for both imported and exported functions.    - **Relation to Incorrect Branch Target Resolution**: Misresolution can result in calling non-existent or unrelated functions, causing undefined behavior.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (param i32) (result i32)))
    (func $call_import_and_export (result i32)
      (call $external_func (i32.const 10))
    )
    (export "exported_func" (func $external_func))
    (func (call $external_func (i32.const 10)))
  )
  "type mismatch"
)